--- a/dashboard/templates/dashboard_ordens.html
+++ b/dashboard/templates/dashboard_ordens.html
@@ -79,6 +79,37 @@ Dashboard
 <div id="chart4" style="width: 600px; height: 400px;"></div>
 
 
+<!-- AGREGAR GRAFICO DE BARRAS PARA VENTAS MENSUALES  -->
+<!-- GRAFICO PARA INGRESOS SEMANALES -->
+<!-- <canvas id="myChart"></canvas>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+  var ctx = document.getElementById('myChart').getContext('2d');
+  var myChart = new Chart(ctx, {
+    type: 'line', // Tipo de gráfico de línea
+    data: {
+      labels: ['Lun', 'Mar', 'Mié', 'Jue', 'Vie', 'Sab', 'Dom'], // Días de la semana
+      datasets: [{
+        label: 'Ingresos Semanales',
+        data: [7000, 10000, 14000, 18000, 21000, 26000, 23000], // Los datos de ingresos
+        borderColor: 'rgba(0, 123, 255, 1)', // Color de la línea
+        backgroundColor: 'rgba(0, 123, 255, 0.2)', // Color de la franja celeste
+        fill: true, // Llenar debajo de la línea
+        tension: 0.4, // Suaviza la línea
+      }]
+    },
+    options: {
+      responsive: true,
+      scales: {
+        y: {
+          beginAtZero: true // Empieza el eje Y desde cero
+        }
+      }
+    }
+  });
+</script> -->
+
+
 
 
 
