--- a/report/templates/list_report_ordenes/filtros/filtro_estado_report.html
+++ b/report/templates/list_report_ordenes/filtros/filtro_estado_report.html
@@ -1,14 +1,17 @@
-<form action="{% url 'orden_list_filter' %}" method="GET">
-    <select name="searchEstadoreporte" id="searchEstadoreporte">
-        <option disabled {% if not queryestadoreport %}selected{% endif %}>Seleccione estado</option>
-        {% for value, label in statusorden %}
-            <option value="{{ label }}" {% if label == queryestadoreport %}selected{% endif %}>{{ label }}</option>
-        {% endfor %}
-        {% if queryestadoreport %}
-            <option value="borrarFiltro">Borrar filtro</option>
-        {% endif %}
-    </select>
-    <button type="submit" class="btn btn-primary">
-        Buscar por estado
-    </button>
+<form action="{% url 'orden_list_filter' %}" method="GET" class="space-y-4">
+    <div class="flex flex-col md:flex-row gap-2 items-center">
+        <select name="searchEstadoreporte" id="searchEstadoreporte" class="border border-gray-300 rounded-lg p-2 w-full md:w-1/3">
+            <option disabled {% if not queryestadoreport %}selected{% endif %}>Seleccione estado</option>
+            {% for value, label in statusorden %}
+                <option value="{{ label }}" {% if label == queryestadoreport %}selected{% endif %}>{{ label }}</option>
+            {% endfor %}
+            {% if queryestadoreport %}
+                <option value="borrarFiltro">Borrar filtro</option>
+            {% endif %}
+        </select>
+
+        <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-lg shadow-md transition-all duration-300 ease-in-out w-full md:w-auto">
+            Buscar por estado
+        </button>
+    </div>
 </form>
